--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,11 @@ body {
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: bottom 0px;
-    background-size:cover;
-    background-color: black;
-    color: rgb(255, 255, 255);
+    background-size: cover;
+    background-color: #000;
+    color: #fff;
     margin: 0;
+    max-width:100vw;
 }
 
 a {
@@ -14,7 +15,7 @@ a {
 }
 
 a.navtext {
-    color:black;
+    color: #000;
 }
 
 .navbar {
@@ -26,7 +27,7 @@ a.navtext {
     background-color: #CCCCCC;
     min-height: 60px;
     margin: 0;
-    top:0;
+    top: 0;
     width: 100vw;
     justify-content: center;
     flex-wrap: wrap;
@@ -44,8 +45,8 @@ a.navtext {
 .navitem {
     text-align: center;
     margin: 0.5em;
-    margin-left: 1.5em;
-    margin-right: 1.5em;
+    margin-left: 1em;
+    margin-right: 1em;
     padding: 0em;
     font-size: 2em;
     min-width: 200px;
@@ -59,46 +60,15 @@ a.navtext {
     border-radius: 0.15em;
     background-color: #CCCCCC;
     margin: 0.5em;
-    padding:1em;
+    padding: 1em;
     font-size: 3em;
     min-width: 160px;
     width: 30vw;
     color: black;
 
     font-family: sans-serif;
-    
+
     text-align: center;
-}
-
-
-.aboutme-item {
-    margin: 30px;
-    font-family: sans-serif;
-    font-size: 1.75em;
-    padding: 0.4em;
-    border-width: 4px;
-    border-style:ridge;
-}
-
-#aboutme-container {
-    display: flex;
-    margin: 0;
-    top:0;
-    justify-content: center;
-    flex-wrap: wrap;
-    font-family: "Impact", "Impact Condensed", sans-serif;
-}
-
-#aboutme-bio {
-    min-width: 300px;
-    width:60vw;
-    line-height:150%;
-}
-
-#aboutme-portrait {
-    min-width:240px;
-    width:20vw;
-    padding: 0;
 }
 
 #title {
@@ -118,12 +88,11 @@ a.navtext {
 }
 
 #header {
+    font-weight:normal;
     text-align: left;
     margin-left: 1em;
     font-size: 6em;
     color: #FFFFFF;
-    text-shadow: 2px 2px 2px #DDDDDDFF, 4px 4px 4px #BBBBBBBB, 6px 6px 6px #99999999;
     font-family: "Impact", "Impact Condensed", sans-serif;
     line-height: 40%;
 }
-
