--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,8 @@ a.navtext {
 }
 
 .projectbutton {
+
+    display: flex;
     text-decoration: none;
     text-decoration-line: none;
     border-radius: 0.15em;
@@ -81,12 +83,17 @@ a.navtext {
     font-size: 2.5em;
     min-width: 160px;
     width: 25vw;
+    min-height:3em;
     color: black;
-
+    align-items: center;
     font-family: sans-serif;
-
+    justify-content: center;
     text-align: center;
+
+    background-position: center;
+    background-size:100%;
 }
+
 
 .projectbutton a {
     color:black;
