--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,7 +1,6 @@
 .aboutme-item {
     margin: 30px;
     font-family: sans-serif;
-    font-size: 1.75em;
     padding: 0.4em;
     border-width: 4px;
     border-style:ridge;
@@ -14,16 +13,56 @@
     justify-content: center;
     flex-wrap: wrap;
     font-family: "Impact", "Impact Condensed", sans-serif;
+    padding: 2em;
+    
 }
 
 #aboutme-bio {
+    overflow-y: scroll;
+    font-size: 1.5em;
     min-width: 300px;
-    width:60vw;
+    width: 60vw;
+    height: 30vw;
+    line-height:150%;
+}
+
+#aboutme-contact {
+    align-self:center;
+    text-align: center;
+    font-size: 1.75em;
+    flex-shrink:1;
+    min-width: 300px;
+    width: min-content;
     line-height:150%;
 }
 
 #aboutme-portrait {
+    display: block;
+    align-self:center;
     min-width:240px;
     width:20vw;
     padding: 0;
+    transition: filter 0.3s, transform 0.3s;
 }
+
+#aboutme-portrait:hover {
+    
+    transition: filter 6s ease-in, transform 6s ease-in;
+    filter: saturate(300%) contrast(300%);
+    content: url("../images/normal.jpg");
+    transform: scale(1.5, 1.5);
+}
+
+@media only screen and (max-width: 1050px) {
+    #aboutme-portrait {
+        min-width:240px;
+        width:30vw;
+    }
+    #aboutme-bio {
+        flex-shrink:1;
+        font-size: 2em;
+        min-width: 300px;
+        width:80vw;
+        line-height:120%;
+    }
+  }
