--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,12 @@ body {
     background-position: bottom 0px;
     background-size: cover;
     background-color: #000;
+    display:block;
     color: #fff;
     margin: 0;
+    padding: 0;
     max-width:100vw;
+    backdrop-filter: blur 30px;
 }
 
 a {
@@ -15,10 +18,17 @@ a {
 }
 
 a.navtext {
+    transition: color 0.1s;
     color: #000;
 }
 
+a.navtext:hover {
+    color:white;
+    transition: color 0.1s;
+}
+
 .navbar {
+    animation: navcolor 5s linear 0s infinite normal;
     display: flex;
     /*position:fixed;*/
     background-image: url("../images/cd.jpg");
@@ -28,7 +38,7 @@ a.navtext {
     min-height: 60px;
     margin: 0;
     top: 0;
-    width: 100vw;
+    width: 100%;
     justify-content: center;
     flex-wrap: wrap;
     font-family: "Impact", "Impact Condensed", sans-serif;
@@ -52,6 +62,12 @@ a.navtext {
     min-width: 200px;
     width: 13vw;
     color: black;
+    transition: color 0.3s;
+}
+
+.navitem:hover {
+    transition: color 0.3s;
+    color:white;
 }
 
 .homebutton {
@@ -71,41 +87,9 @@ a.navtext {
     text-align: center;
 }
 
-.projectbutton {
-
-    display: flex;
-    text-decoration: none;
-    text-decoration-line: none;
-    border-radius: 0.15em;
-    background-color: #CCCCCC;
-    margin: 0.25em;
-    padding: 1em;
-    font-size: 2.5em;
-    min-width: 160px;
-    width: 25vw;
-    min-height:3em;
-    color: black;
-    align-items: center;
-    font-family: sans-serif;
-    justify-content: center;
-    text-align: center;
-
-    background-position: center;
-    background-size:100%;
-}
-
-
-.projectbutton a {
-    color:black;
-}
-
-a.sourcelink {
-    color:blue;
-}
-
 #title {
     text-align: center;
-    font-size: 8em;
+    font-size: 6em;
     color: #FF9900;
     text-shadow: 0px 2px 2px #dd8500, 0px 4px 4px #bb7000, 0px 8px 8px #995c00;
     font-family: "Impact", "Impact Condensed", sans-serif;
@@ -113,7 +97,7 @@ a.sourcelink {
 
 #subtitle {
     text-align: center;
-    font-size: 4em;
+    font-size: 3em;
     color: white;
     text-shadow: 0px 1px 1px #DDDDDD, 0px 2px 2px #BBBBBB, 0px 4px 4px #999999;
     font-family: sans-serif;
@@ -127,4 +111,14 @@ a.sourcelink {
     color: #FFFFFF;
     font-family: "Impact", "Impact Condensed", sans-serif;
     line-height: 40%;
+}
+
+@keyframes navcolor {
+    0% {
+        filter: saturate(50%) hue-rotate(0);
+    }
+
+    100% {
+        filter: saturate(50%) hue-rotate(360deg);
+    }
 }
