experience, cosmetic changes, more responsive

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,8 @@ body {
     padding: 0;
     max-width:100vw;
     backdrop-filter: blur 30px;
+
+    font-family: "Bahnschrift", sans-serif;
 }
 
 a {
@@ -30,18 +32,20 @@ a.navtext:hover {
 .navbar {
     animation: navcolor 5s linear 0s infinite normal;
     display: flex;
-    /*position:fixed;*/
     background-image: url("../images/cd.jpg");
-    background-size: 100vw;
+    background-size: cover;
     background-attachment: fixed;
+    background-position: bottom 0px;
+    background-repeat: no-repeat;
     background-color: #CCCCCC;
+    
     min-height: 60px;
     margin: 0;
     top: 0;
     width: 100%;
     justify-content: center;
     flex-wrap: wrap;
-    font-family: "Impact", "Impact Condensed", sans-serif;
+    font-family: calvera, "Impact", "Impact Condensed", sans-serif;
 
 }
 
@@ -76,13 +80,13 @@ a.navtext:hover {
     border-radius: 0.15em;
     background-color: #CCCCCC;
     margin: 0.5em;
-    padding: 1em;
-    font-size: 3em;
-    min-width: 160px;
-    width: 30vw;
+    padding: 0.25em;
+    font-size: 4em;
+    min-width: 160px, min-content;
+    width: 20vw;
     color: black;
 
-    font-family: sans-serif;
+    font-family: blackmustang, sans-serif;
 
     text-align: center;
 }
@@ -91,16 +95,16 @@ a.navtext:hover {
     text-align: center;
     font-size: 6em;
     color: #FF9900;
-    text-shadow: 0px 2px 2px #dd8500, 0px 4px 4px #bb7000, 0px 8px 8px #995c00;
-    font-family: "Impact", "Impact Condensed", sans-serif;
+    text-shadow: 0px 1px 1px #dd8500, 0px 2px 2px #bb7000, 0px 4px 4px #995c00;
+    font-family: calvera, "Impact", "Impact Condensed", sans-serif;
 }
 
 #subtitle {
+    font-weight:normal;
     text-align: center;
-    font-size: 3em;
+    font-size: 4em;
     color: white;
-    text-shadow: 0px 1px 1px #DDDDDD, 0px 2px 2px #BBBBBB, 0px 4px 4px #999999;
-    font-family: sans-serif;
+    font-family: blackmustang, sans-serif;
 }
 
 #header {
@@ -109,7 +113,7 @@ a.navtext:hover {
     margin-left: 1em;
     font-size: 6em;
     color: #FFFFFF;
-    font-family: "Impact", "Impact Condensed", sans-serif;
+    font-family: calvera, "Impact", "Impact Condensed", sans-serif;
     line-height: 40%;
 }
 
@@ -122,3 +126,29 @@ a.navtext:hover {
         filter: saturate(50%) hue-rotate(360deg);
     }
 }
+
+@font-face {
+    font-family: calvera;
+    src: url(../misc/Calvera.ttf);
+  }
+
+  @font-face {
+    font-family: blackmustang;
+    src: url(../misc/BlackMustang.ttf);
+  }
+
+
+  @media only screen and (max-width: 759px) {
+    #header {
+        font-size: 4em;
+        text-align: center;
+        margin-left: 0;
+    }
+  }
+
+  @media only screen and (max-width: 1050px) {
+    .homebutton {
+        font-size: 4em;
+        width: 60vw;
+    }
+  }
