Revert "experience, cosmetic changes, more responsive"

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,5 +1,6 @@
 .aboutme-item {
     margin: 30px;
+    font-family: sans-serif;
     padding: 0.4em;
     border-width: 4px;
     border-style:ridge;
@@ -11,6 +12,7 @@
     top:0;
     justify-content: center;
     flex-wrap: wrap;
+    font-family: "Impact", "Impact Condensed", sans-serif;
     padding: 2em;
     
 }
