--- a/css/certs.css
+++ b/css/certs.css
@@ -39,3 +39,9 @@
     max-width:70%;
     max-height:60%;
 }
+
+@media only screen and ((max-width: 759px) or (max-width:5in)){
+    .certs-item {
+        height:25vh;
+    }
+  }
