--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../images/zased.gif");
+    background-image: url("../images/flames.gif");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: bottom 0px;
@@ -10,7 +10,6 @@ body {
     margin: 0;
     padding: 0;
     max-width:100vw;
-    backdrop-filter: blur 30px;
 
     font-family: "Bahnschrift", sans-serif;
 }
