--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("../images/flames.gif");
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     background-attachment: scroll;
     background-position: bottom 0px;
     background-size: cover;
