--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ a.navtext:hover {
 
     body {
         background-image: none !important; /* this is bad but it will work */
-        background-color:#000;
+        background-color:#fff;
     }
 
   }
